changed  contact me address

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Get In Touch</h2>
 
         <p class="contact-message">.</p>
-        <a class="btn" href="C:\Users\hp\Desktop\WEB\ranjeet\contact.html">CONTACT ME</a>
+        <a class="btn" href="contact.html">CONTACT ME</a>
       </div>
     </div>
 
